frontend/test/should_fail/edge_014.grg
using edge_model_007;

rule r {
	replace {
		x:Node ?-e:A-? y:Node;
	}
}
